Version 0.3.2 (2018-)
- Allow `PASSWORD` to be numeric (Issue #108) @danielperna84

Version 0.3.1 (2018-07-15)
- Fix SESAME / SESAME_TOTP_SECRET bug (Issue #103) @danielperna84
- Added client IP to network status modal @danielperna84
- Allow setting logging level with environment variable HC_LOGLEVEL @danielperna84

Version 0.3.0 (2018-07-13)
- Allow passing settings via environment variables (Issue #100) @danielperna84
- Added basic git stash functionality (Issue #16) @danielperna84
- Added NOTIFY_SERVICE option @danielperna84
- Notifying if used passwords are insecure (Issue #100) and if SESAME has been used @danielperna84
- CREDENTIALS setting replaced by USERNAME and PASSWORD @danielperna84
- PASSWORD can optionally be provided as SHA256 hash (Issue #100) @danielperna84
- Added SESAME_TOTP_SECRET for TOTP based IP whitelisting (Issue #100) @danielperna84
- Added git diff functionality (Issue #16) @danielperna84
- Red colored menu button as indicator for outdated version @danielperna84
- GIT setting can now be set with settings file or environment variable @danielperna84
- LISTENPORT has been renamed to PORT (LISTENPORT still works though)
- Hiding git menu when git is disabled @danielperna84
- Removed right dragging area for editor settings (Issue #102) @danielperna84
- Added IGNORE_SSL option to disable SSL verification when connecting to HASS API @danielperna84

Version 0.2.9 (2018-06-22)
- Material Icons and HASS-help now open in new tab instead of modal (Issues #85 and #34) @danielperna84
- Open file by URL (Issue #95) @danielperna84
- Added ENFORCE_BASEPATH option (Issue #68) @danielperna84
- Cosmetic fix for scaled viewports @danielperna84
- Added search-function for entities (Issue #99) @danielperna84
- Updated Ace Editor to 1.3.3
- Updated jQuery to 3.3.1
- Updated js-yaml to 3.12.0

Version 0.2.8 (2018-04-23)
- Updated CDN libraries @jmart518
- Cosmetic improvements @jmart518
- Added event observer @danielperna84

Version 0.2.7 (2018-03-30)